--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>3D Boxes Background</title>
 </head>
 <body>
- <h1>Project Starter</h1>
+  <button id="btn" class="magic">Magic</button>
  <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
