add div with class boxes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
   <button id="btn" class="magic">Magic</button>
+  <div id="boxes" class="boxes">
+
+  </div>
  <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
