--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 <body>
   <button id="btn" class="magic">Magic</button>
   <div id="boxes" class="boxes">
-
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
   </div>
  <script type='text/javascript' src='script.js'></script>
 </body>
