--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 </head>
 <body>
   <button id="btn" class="magic">Magic</button>
-  <div id="boxes" class="boxes big">
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
+  <div id="boxes" class="boxes">
+    <div class="box" style="background-position: 0 0"></div>
+<div class="box" style="background-position: -125px 0"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" style="background-position: -375px 0"></div>
+<div class="box" style="background-position: 0 -125px"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" style="background-position: -125px -125px"></div>
+<div class="box" style="background-position: 0"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" style="background-position: -250px 0"></div>
+<div class="box" ></div>
 <div class="box"></div>
 <div class="box"></div>
   </div>
